// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldWithValidation when rendering message as text with no error message passed should simply render the child as it is 1`] = `
<div>
  <div>
    <div
      class="Input__inputContainer Input__inputContainer--size_medium"
      data-testid="inputContainer"
    >
      <input
        class="Input__input Input__input--size_medium"
        data-lpignore="true"
        id=":r0:"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`FieldWithValidation when using tooltip when error message is defined should remove the message when field is blurred 1`] = `
<div>
  <div>
    <div
      class="Input__inputContainer Input__inputContainer--context_critical Input__inputContainer--size_medium"
      data-testid="inputContainer"
    >
      <input
        aria-invalid="true"
        class="Input__input Input__input--size_medium"
        data-lpignore="true"
        id=":r6:"
        type="text"
        value=""
      />
    </div>
  </div>
  <p
    class="Text--context_critical Text--size_small FieldWithValidation"
  >
    invalid field
  </p>
</div>
`;

exports[`FieldWithValidation when using tooltip when error message is defined should render the message when field is focused 1`] = `
<div>
  <div>
    <div
      class="Input__inputContainer Input__inputContainer--context_critical Input__inputContainer--size_medium"
      data-testid="inputContainer"
    >
      <input
        aria-invalid="true"
        class="Input__input Input__input--size_medium"
        data-lpignore="true"
        id=":r5:"
        type="text"
        value=""
      />
    </div>
  </div>
  <p
    class="Text--context_critical Text--size_small FieldWithValidation"
  >
    invalid field
  </p>
</div>
`;

exports[`FieldWithValidation when using tooltip when error message is defined should set context to bad on child 1`] = `
<div>
  <div>
    <div
      class="Input__inputContainer Input__inputContainer--context_critical Input__inputContainer--size_medium"
      data-testid="inputContainer"
    >
      <input
        aria-invalid="true"
        class="Input__input Input__input--size_medium"
        data-lpignore="true"
        id=":r4:"
        type="text"
        value=""
      />
    </div>
  </div>
  <p
    class="Text--context_critical Text--size_small FieldWithValidation"
  >
    invalid field
  </p>
</div>
`;

exports[`FieldWithValidation when using tooltip with no error message passed should not render a tooltip with no error message 1`] = `
<div>
  <div>
    <div
      class="Input__inputContainer Input__inputContainer--size_medium"
      data-testid="inputContainer"
    >
      <input
        class="Input__input Input__input--size_medium"
        data-lpignore="true"
        id=":r3:"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`FieldWithValidation with error message passed should render the message as text 1`] = `
<div>
  <div>
    <div
      class="Input__inputContainer Input__inputContainer--context_critical Input__inputContainer--size_medium"
      data-testid="inputContainer"
    >
      <input
        aria-invalid="true"
        class="Input__input Input__input--size_medium"
        data-lpignore="true"
        id=":r2:"
        type="text"
        value=""
      />
    </div>
  </div>
  <p
    class="Text--context_critical Text--size_small FieldWithValidation"
  >
    invalid field
  </p>
</div>
`;

exports[`FieldWithValidation with error message passed should set context to bad on child 1`] = `
<div>
  <div>
    <div
      class="Input__inputContainer Input__inputContainer--context_critical Input__inputContainer--size_medium"
      data-testid="inputContainer"
    >
      <input
        aria-invalid="true"
        class="Input__input Input__input--size_medium"
        data-lpignore="true"
        id=":r1:"
        type="text"
        value=""
      />
    </div>
  </div>
  <p
    class="Text--context_critical Text--size_small FieldWithValidation"
  >
    invalid field
  </p>
</div>
`;
